- include/config.h desk/* tools/erd.c: Code cleanup: remove conditionally
  compiled code for crippled desktop, since it is no longer used. (RFB)
- desk/deskdir.c: Eliminate blank_it(): it performs no useful function. (RFB)

2014-05-30
- desk/deskdir.c: TOS compatibility: always display file/folder countdown
  when copying/deleting. (RFB)
- desk/desk1.c desk/deskdir.c desk/deskdir.h desk/deskfun.c desk/deskfun.h:
  Code cleanup: remove no-longer-used args from dir_op(), fun_op(). (RFB)

2014-05-31
- desk/deskdir.c: Rewrite dir_op() to fix some obscure bugs & improve
  maintainability. (RFB)
- desk/deskdir.c: Code cleanup: use local variable for tree pointer to
  save code space. (RFB)
- desk/deskdir.c: Code cleanup: fold button detection into do_namecon(). (RFB)
- desk/deskdir.c: Display error message if insufficient memory for
  desktop copy. (RFB)
- aes/gemdos.c aes/gemdos.h desk/deskdir.c desk/desktop.def
  desk/desktop.rsc: Improve message issued by desktop copy when directory
  is full. (RFB)

2014-06-01
- aes/gemdos.c aes/gemdos.h desk/deskbind.h desk/deskconf.h desk/deskfpd.c
  desk/deskfpd.c desk/deskwin.c: Fix problem: the total number of items in
  all open windows is no longer limited to 400. (RFB)
- desk/deskfpd.c desk/deskfpd.h: Code cleanup: eliminate unused variable
  in PNODE structure. (RFB)
- desk/deskfpd.c desk/deskfpd.h desk/deskpro.c desk/deskwin.c: Remove
  remnants of crippled desktop. (RFB)
- desk/deskfpd.c: Code cleanup: minor improvements to pn_fcomp(). (RFB)

2014-06-02
- po/fr.po: Updated. (VRI)

2014-06-06
- aes/gemdos.c aes/gemdos.h desk/deskdir.c desk/desktop.def
  desk/desktop.rsc: Allow desktop copy/delete operations to be interrupted
  by UNDO key. (RFB)

2014-06-07
- desk/deskfun.c: Fix regression introduced on 2013-03-18: the args to
  par_chk() were incorrect, so alert STBADCOP was never issued. (RFB)
- desk/deskdir.c desk/deskdir.h desk/deskfun.c: Code cleanup: make the
  function of par_chk() much more obvious. (RFB)