@@ -10,4 +10,4 @@
 WORD true_closewnd(WNODE *pw);
 WORD fun_close(WNODE *pw, WORD trueclose);
 void snap_disk(WORD x, WORD y, WORD *px, WORD *py);
-WORD desk1_drag(WORD wh, WORD dest_wh, WORD sobj, WORD dobj, WORD mx, WORD my);
+WORD desk1_drag(WORD wh, WORD dest_wh, WORD sobj, WORD dobj, WORD mx, WORD my, WORD keystate);
